--- a/www/package.json
+++ b/www/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "webpack"
   ],
   "author": "author",
-  "license": "GPL-3",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/inferiorhumanorgans/dcvr/issues"
   },
@@ -30,13 +30,12 @@
     "shc-wasm": "file:../pkg"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
-    "css-minimizer-webpack-plugin": "^1.3.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "mini-css-extract-plugin": "^1.6.2",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
